--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
+---
+layout: default
+title: Home
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ page.title }} | {{ site.title }}</title>
+    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <p>This is a sample website.</p>
-  <script src="script.js"></script>
+
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="{{ "/" | relative_url }}">Home</a></li>
+            <li><a href="{{ "/about/" | relative_url }}">About</a></li>
+            <li><a href="{{ "/contact/" | relative_url }}">Contact</a></li>
+        </ul>
+    </nav>
+
+    <header>
+        <h1>{{ site.title }}</h1>
+        <p>{{ site.description }}</p>
+    </header>
+
+    <!-- Main Content Section -->
+    <main>
+        <h2>Welcome to My Jekyll Site!</h2>
+        <p>This site is built using Jekyll. Below is a list of posts:</p>
+
+        <ul>
+            {% for post in site.posts %}
+                <li>
+                    <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+                    <p>{{ post.excerpt }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; {{ site.time | date: "%Y" }} {{ site.author }}</p>
+    </footer>
+
 </body>
 </html>
+
